--- a/src/europe/2_assign_grid.Rmd
+++ b/src/europe/2_assign_grid.Rmd
@@ -84,18 +84,52 @@ length(cols_occ_file)
 We define a subset of columns we are interested to:
 
 ```{r columns_to_use_eu}
-cols_to_use <- c("gbifID", "scientificName", "kingdom", "phylum", "class", "order",
-             "family", "genus", "specificEpithet", "infraspecificEpithet",
-             "taxonRank", "taxonomicStatus", "datasetKey", "basisOfRecord",
-             "occurrenceStatus", "lastInterpreted", "hasCoordinate",
-             "hasGeospatialIssues", "decimalLatitude", "decimalLongitude",
-             "coordinateUncertaintyInMeters", "coordinatePrecision",
-             "pointRadiusSpatialFit", "verbatimCoordinateSystem", "verbatimSRS",
-             "eventDate", "startDayOfYear", "endDayOfYear", "year", "month",
-             "day", "verbatimEventDate", "samplingProtocol", "samplingEffort",
-             "issue", "taxonKey", "acceptedTaxonKey", "kingdomKey", "phylumKey",
-             "classKey", "orderKey", "familyKey", "genusKey", "subgenusKey",
-             "speciesKey", "species")
+cols_to_use <- c("gbifID", 
+                 "scientificName",
+                 "kingdom",
+                 "phylum",
+                 "class",
+                 "order",
+                 "family",
+                 "genus",
+                 "specificEpithet",
+                 "infraspecificEpithet",
+                 "taxonRank",
+                 "taxonomicStatus",
+                 "datasetKey",
+                 "basisOfRecord",
+                 "occurrenceStatus",
+                 "lastInterpreted",
+                 "hasCoordinate",
+                 "hasGeospatialIssues",
+                 "decimalLatitude",
+                 "decimalLongitude",
+                 "coordinateUncertaintyInMeters",
+                 "coordinatePrecision",
+                 "pointRadiusSpatialFit",
+                 "verbatimCoordinateSystem",
+                 "verbatimSRS",
+                 "eventDate",
+                 "startDayOfYear",
+                 "endDayOfYear",
+                 "year",
+                 "month",
+                 "day",
+                 "verbatimEventDate",
+                 "samplingProtocol",
+                 "samplingEffort",
+                 "issue",
+                 "taxonKey",
+                 "acceptedTaxonKey",
+                 "kingdomKey",
+                 "phylumKey",
+                 "classKey",
+                 "orderKey",
+                 "familyKey",
+                 "genusKey",
+                 "subgenusKey",
+                 "speciesKey",
+                 "species")
 ```
 
 Columns in occurrence file not present in the subset:
