Update syntax occ_download() with pred() functions

--- a/src/belgium/1_download.Rmd
+++ b/src/belgium/1_download.Rmd
@@ -91,11 +91,11 @@ gbif_download_key <- "0000537-200127171203522"
 
 # Trigger new download (commented by default)
 # gbif_download_key <- occ_download(
-#   paste0("country = ", paste(countries, collapse = ",")),
-#   paste0("basisOfRecord = ", paste(basis_of_record, collapse = ",")),
-#   paste0("year >= ", year_begin),
-#   paste0("year <= ", year_end),
-#   paste0("hasCoordinate = ", hasCoordinate),
+#   pred_in("country", countries),
+#   pred_in("basisOfRecord", basis_of_record),
+#   pred_gte("year", year_begin),
+#   pred_lte("year", year_end),
+#   pred("hasCoordinate", hasCoordinate),
 #   user = rstudioapi::askForPassword("GBIF username"),
 #   pwd = rstudioapi::askForPassword("GBIF password"),
 #   email = rstudioapi::askForPassword("Email address for notification")
