--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -184,12 +184,14 @@ cols_to_use <- c(
   "gbifID", "scientificName", "kingdom", "phylum", "class", "order", "family",
   "genus", "specificEpithet", "infraspecificEpithet", "taxonRank", 
   "taxonomicStatus", "datasetKey", "basisOfRecord", "occurrenceStatus",
-  "lastInterpreted", "hasCoordinate", "hasGeospatialIssues", "decimalLatitude", "decimalLongitude", "coordinateUncertaintyInMeters",
-  "coordinatePrecision", "pointRadiusSpatialFit", "verbatimCoordinateSystem", 
-  "verbatimSRS", "eventDate", "startDayOfYear", "endDayOfYear", "year", "month",
-  "day", "verbatimEventDate", "samplingProtocol", "samplingEffort", "issue",
-  "taxonKey", "acceptedTaxonKey", "kingdomKey", "phylumKey", "classKey", 
-  "orderKey", "familyKey", "genusKey", "subgenusKey", "speciesKey", "species"
+  "lastInterpreted", "hasCoordinate", "hasGeospatialIssues", "decimalLatitude",
+  "decimalLongitude", "coordinateUncertaintyInMeters", "coordinatePrecision",
+  "pointRadiusSpatialFit", "verbatimCoordinateSystem", "verbatimSRS",
+  "eventDate", "startDayOfYear", "endDayOfYear", "year", "month", "day",
+  "verbatimEventDate", "samplingProtocol", "samplingEffort", "issue",
+  "identificationVerificationStatus", "taxonKey", "acceptedTaxonKey",
+  "kingdomKey", "phylumKey", "classKey", "orderKey", "familyKey", "genusKey",
+  "subgenusKey", "speciesKey", "species"
 )
 ```
 
