Add unvalidated to identification values to discard
Although added after running pipeline, we saw that there is no data with value "unvalidated"

--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -247,7 +247,8 @@ We won't take into account unverified observations neither:
 
 ```{r identificationVerificationStatus}
 identificationVerificationStatus_to_discard <- c(
-  "unverified"
+  "unverified",
+  "unvalidated"
 )
 ```
 
