--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -24,6 +24,7 @@ Load libraries:
 
 ```{r load_libraries}
 library(tidyverse)      # To do datascience
+library(tidylog)        # To provide feedback on dplyr functions
 library(here)           # To find files
 library(rgbif)          # To use GBIF services
 library(glue)           # To write queries
