--- a/src/europe/2_assign_grid.Rmd
+++ b/src/europe/2_assign_grid.Rmd
@@ -24,6 +24,7 @@ Load libraries:
 
 ```{r load_libraries_assign_grid_eu}
 library(tidyverse)      # To do datascience
+library(tidylog)        # To provide feedback on dplyr functions
 library(here)           # To find files
 library(rgbif)          # To use GBIF services
 library(glue)           # To write queries
