Improve handling of zip file for European level cube
Similar to 003bd0a01d861ffd0e929398d40c52c656ac8253

--- a/src/europe/2_assign_grid.Rmd
+++ b/src/europe/2_assign_grid.Rmd
@@ -40,7 +40,8 @@ We download the occurrences from GBIF, based on the key got in `download.Rmd`:
 ```{r get_occ_file_eu}
 key <- "0003164-200613084148143"
 zip_filename <- paste0(key, ".zip")
-if (!file.exists(here::here("data", "raw", zip_filename))) {
+zip_path <- here::here("data", "raw", zip_filename)
+if (!file.exists(zip_path)) {
   occ <- occ_download_get(
     key = key, 
     path = here::here("data", "raw")
@@ -55,7 +56,7 @@ occ_file <- paste(key, "occurrence.txt", sep = "_")
 occ_path <- here::here("data", "raw", occ_file)
 
 if (!file.exists(here::here("data", "raw", occ_file))) {
-  unzip(zipfile = occ,
+  unzip(zipfile = zip_path,
         files = "occurrence.txt",
         exdir = here::here("data", "raw"))
   file.rename(from = here::here("data", "raw", "occurrence.txt"),
