Correct commit 6c456f7: iddentification values to discard were inserted in the wrong vector
This has no influence as these extra values are not present in Belgian observations.

--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -240,9 +240,7 @@ Occurrences with the following occurrence status should be filtered out as well:
 ```{r occurrenceStatus}
 occurrenceStatus_to_discard <- c(
   "absent",
-  "excluded",
-  "not able to validate",
-  "control could not be conclusive due to insufficient knowledge"
+  "excluded"
 )
 ```
 
@@ -251,7 +249,9 @@ We won't take into account unverified observations neither:
 ```{r identificationVerificationStatus}
 identificationVerificationStatus_to_discard <- c(
   "unverified",
-  "unvalidated"
+  "unvalidated",
+  "not able to validate",
+  "control could not be conclusive due to insufficient knowledge"
 )
 ```
 
