--- a/src/europe/1_download.Rmd
+++ b/src/europe/1_download.Rmd
@@ -36,10 +36,10 @@ library(leaflet)        # To make interactive maps
 
 ## Taxa
 
-The species selected for modelling are saved in file `modelling_species.tsv` on GitHub:
+The species selected for modelling are saved in file `modelling_species.tsv` on GitHub (link with specific commit for traceability):
 
 ```{r load_modelling_species_file_eu}
-taxa_input_file <- "https://raw.githubusercontent.com/trias-project/occ-processing/master/references/modelling_species.tsv"
+taxa_input_file <- "https://raw.githubusercontent.com/trias-project/occ-cube-alien/b22225d4eddb3bc6916f387c5a0d6dac3a38a90e/references/modelling_species.tsv"
 taxa <- read_tsv(taxa_input_file,
                  na = "")
 ```
