--- a/src/europe/3_aggregate.Rmd
+++ b/src/europe/3_aggregate.Rmd
@@ -42,8 +42,9 @@ library(glue)           # To write queries
 Read taxa for modelling from  `modelling_species.tsv`:
 
 ```{r read_modelling_taxa}
+taxa_input_file <- "https://raw.githubusercontent.com/trias-project/occ-cube-alien/b22225d4eddb3bc6916f387c5a0d6dac3a38a90e/references/modelling_species.tsv"
 modelling_taxa <- read_tsv(
-  here::here("references", "modelling_species.tsv"),
+  taxa_input_file,
   na = "",
   quote = "",
   col_types = cols(
