Add values of identificationVerificationStatus to discard
See #24

--- a/src/europe/2_assign_grid.Rmd
+++ b/src/europe/2_assign_grid.Rmd
@@ -347,7 +347,10 @@ identificationVerificationStatus_to_discard <- c(
   "unverified",
   "unvalidated",
   "not able to validate",
-  "control could not be conclusive due to insufficient knowledge"
+  "control could not be conclusive due to insufficient knowledge",
+  "unconfirmed",
+  "unconfirmed - not reviewed",
+  "validation requested"
 )
 ```
 
