Update reason why we don't select on taxa in download

--- a/src/belgium/1_download.Rmd
+++ b/src/belgium/1_download.Rmd
@@ -34,7 +34,7 @@ library(lubridate)      # To work with dates
 
 ## Taxa
 
-As the list of alien species in Belgium (defined in the [unified checklist](https://doi.org/10.15468/xoidmd)) is [too long](https://github.com/gbif/portal-feedback/issues/1768) for a query to the GBIF API, we don't filter on taxa in the download step.
+We don't filter on taxa in the download step as we need data at class level for compensating research effort bias (see [indicators](https://github.com/trias-project/indicators) repository) later.
 
 ## Countries
 
