Add overview on number of occs before and after filtering

--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -175,6 +175,19 @@ cols_occ_db <- dbListFields(sqlite_occ, table_name)
 length(cols_occ_db)
 ```
 
+Number of occurrences:
+
+```{r n_occs_raw}
+query <- glue_sql(
+    "SELECT COUNT() FROM {table}",
+    table = table_name,
+    .con = sqlite_occ
+  )
+n_occs_total <- dbGetQuery(sqlite_occ, query)
+n_occs_total <- n_occs_total$`COUNT()`
+n_occs_total
+```
+
 # Filter data
 
 ## Define columns to select
@@ -440,6 +453,19 @@ query <- glue_sql(
   )
 status_verification_left <- dbGetQuery(sqlite_occ, query)
 status_verification_left
+```
+
+Number of occurrences left:
+
+```{r n_occs_filtered}
+query <- glue_sql(
+    "SELECT COUNT() FROM {table}",
+    table = table_name_subset,
+    .con = sqlite_occ
+  )
+n_occs <- dbGetQuery(sqlite_occ, query)
+n_occs <- n_occs$`COUNT()`
+n_occs
 ```
 
 Overview of all indexes present on `occ`:
